# ncmdump-gui

./: .gitignore  CMakeLists.txt  readme.md
fl/: ui  ui.cxx  ui.h
src/: logic.cpp  logic.h  ncmdump-gui.cpp  ui.cxx  ui.h
